--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -1,2 +1,35 @@
 <html style="font-family: helvetica">
-Made with the very awesome <a href="http://d3js.org">D3</a>
+<title>Hither and Thither: About</title>
+<h1>Hither and Thither: About</h1>
+
+Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of passenger movements from 1991 to 2014.
+<p>
+We show you the destinations of outgoing Aussies and origins of incomming visitors.
+
+<h3 name="awesome-team">Team</h3>
+Andy and the ex-DSTCers are:
+<ul>
+<li>Michael Henderson
+<li>Andy Hyland
+<li>Michael Lawley
+<li>Alejandro Metke
+<li>Kerry Raymond
+<li>Jim Steel
+</ul>
+
+<h3>Attributions</h3>
+Data was <a href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3401.0Explanatory%20Notes1May%202014?OpenDocument">sourced from</a> the <a href="http://www.abs.gov.au">Australian Bureau of Statistics</a>.
+<ul>
+<li> <a href="http://www.abs.gov.au/AUSSTATS/ABS@Archive.nsf/log?openagent&340105.xls&3401.0&Time%20Series%20Spreadsheet&26A2C3723CF8403ECA257D0B0019476C&0&May%202014&07.07.2014&Latest">Table 5: Short-term Movement, Visitor Arrivals - Selected Countries of Residence: Original</a>
+<li> <a href="http://www.abs.gov.au/AUSSTATS/ABS@Archive.nsf/log?openagent&340109.xls&3401.0&Time%20Series%20Spreadsheet&FBA236EB46E8F394CA257D0B00194880&0&May%202014&07.07.2014&Latest">Table 9: Short-term Movement, Resident Departures - Selected Destinations: Original</a>
+</ul>
+which are available under the <a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/">Creative Commons Attribution 2.5 Australia License <img alt="Creative Commons Licence" height="20" style="border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
+
+<p>
+Made with the very awesome <a href="http://d3js.org">D3</a> from <a href="http://bost.ocks.org/mike/">Mike Bostock</a> and
+<a href="http://datamaps.github.io">Datamaps</a> from <a href="https://github.com/markmarkoh">Mark DiMarco</a> (Released under the <a href="https://github.com/markmarkoh/datamaps/blob/master/LICENSE">MIT License</a>)
+
+<h3>Thanks</h3>
+Many thanks to the <a href="http://www.govhack.org">Govhack</a> organizers nationally and <a href="http://www.govhack.org/locations/brisbane/">locally</a>, here in Brisbane (thanks Anna Gerber).
+
+
