--- a/vic-builder/www/about.html
+++ b/vic-builder/www/about.html
@@ -8,10 +8,15 @@
 <BODY>
 
 <P>
-Victoria Builder turned this, into this:
+Victoria Builder turned a spreadsheet into a visual reference:
 </P>
 
 <IMG CLASS="spreadsheet" SRC="images/spreadsheet.jpg">
+<IMG CLASS="screenshot" SRC="images/screenshot.jpg">
+
+<P>
+We used these tools: Python, MySQL, Microsoft Excel, PHP, Google APIs (Geocoding and StreetView), Nec
+</P>
 
 <P>
 Attributions:
@@ -21,20 +26,12 @@ Attributions:
 
 <LI><A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A>
 <LI><A TARGET="_new" HREF="http://www.vba.vic.gov.au/">Victorian Building Authority</A>
-<LI><A TARGET="_new" HREF="http://maps.google.com">Google Maps</A>
-<LI><A TARGET="_new" HREF="https://www.google.com/maps/views/streetview">Google StreetView</A>
-<LI><A TARGET="_new" HREF="http://trove.nla.gov.au">Trove</A>.
-<LI>We drew inspiration from <A HREF="http://robotflaneur.com/">Robot Flaneur</A>.
+<LI><A TARGET="_new" HREF="https://developers.google.com/maps/documentation/geocoding/">Google Geocoding API</A>
+<LI><A TARGET="_new" HREF=""></A>
+https://nectar.org.au/
+<LI>and we drew inspiration from <A HREF="http://robotflaneur.com/">Robot Flaneur</A>.
 
 </UL>
-
-<P>
-Tools:  Python, MySQL, Microsoft Excel, PHP, Google APIs (Geocode, StreetView, Maps)
-</P>
-
-<A TARGET="_new" HREF="http://ehive.com/account/4002/object/75178"><IMG SRC="http://f1.ehive.com/4002/1/101socm_17nb_l.jpg"></A>
-
-<A TARGET="_new" HREF="http://trove.nla.gov.au/work/176324406?q=+victoria+bitter&c=picture&versionId=192035472"><IMG SRC="http://digital.slv.vic.gov.au/webclient/StreamGate?folder_id=200&dvs=1405165638508~966"></A>
 
 </BODY>
 
