--- a/vic-builder/www/about.html
+++ b/vic-builder/www/about.html
@@ -7,12 +7,24 @@
 
 <BODY>
 
+<CENTER>
+<TABLE>
+<TR>
+<TD WIDTH="850">
+
+<CENTER>
+<P>
+<H2>
+About
+</H2>
+</P>
+</CENTER>
+
 <P>
 Victoria Builder turned a spreadsheet into a visual reference:
 </P>
 
-<IMG CLASS="spreadsheet" SRC="images/spreadsheet.jpg">
-<IMG CLASS="screenshot" SRC="images/screenshot.jpg">
+<IMG SRC="images/about.png" STYLE="width: 800px">
 
 <P>
 We used these tools: Python, MySQL, Microsoft Excel, PHP, Google APIs (Geocoding and StreetView), Nec
@@ -32,6 +44,11 @@ https://nectar.org.au/
 <LI>and we drew inspiration from <A HREF="http://robotflaneur.com/">Robot Flaneur</A>.
 
 </UL>
+
+</TD>
+</TR>
+</TABLE>
+</CENTER>
 
 </BODY>
 
