--- a/vic-builder/www/api.html
+++ b/vic-builder/www/api.html
@@ -10,8 +10,14 @@
 <CENTER>
 <P STYLE="height: 20px">
 </P>
+
+<CENTER>
 <P>
-We read the data into MySQL and exposed it as a REST/JSON web service:
+<H2>
+All the data is available as a REST/JSON web service:
+</H2>
+</P>
+</CENTER>
 </P>
 </CENTER>
 
