--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -5,8 +5,8 @@
   <LINK REL="stylesheet" TYPE="text/css" HREF="style.css">
 </HEAD>
 
-<frameset rows="355,*" frameborder=0>
-  <frame src="header.html" name="header">
+<frameset rows="400,*" frameborder=0>
+  <frame src="header.php" name="header">
   <frame src="explore.php" name="content">
 </frameset> 
 
