--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -6,6 +6,8 @@ Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of
 <p>
 We show you the destinations of outgoing Aussies and origins of incomming visitors.
 
+<div>
+<img src="DSTC_TShirt.jpg" height=200 style="position:absolute; left:300px;">
 <h3 name="awesome-team">Team</h3>
 Andy and the ex-DSTCers are:
 <ul>
@@ -16,6 +18,7 @@ Andy and the ex-DSTCers are:
 <li>Kerry Raymond
 <li>Jim Steel
 </ul>
+</div>
 
 <h3>Attributions</h3>
 Data was <a href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3401.0Explanatory%20Notes1May%202014?OpenDocument">sourced from</a> the <a href="http://www.abs.gov.au">Australian Bureau of Statistics</a>.
