fix color scheme

--- a/HitherAndThither/pulse.html
+++ b/HitherAndThither/pulse.html
@@ -33,7 +33,10 @@
     <span style="text-shadow:0px 0px 2px black; color:#f88">increasing</span>
   </p>
 </div>
-<footer align="center"><a style="color: #f44" href="credits.html">credits</a></footer>
+<footer width="900px" align="center">
+<a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/"><img alt="Creative Commons Licence" height="20" style="position:absolute; left:140px; border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
+<a style="position:absolute; right:140px; color: #f44" href="credits.html">credits</a>
+</footer>
 </div>
 <script>
 
