--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -1,4 +1,28 @@
 <html style="font-family: helvetica">
+<style>
+h1 {
+  margin-left: -30px;
+  font-family: monospace;
+  font-size: 32px;
+}
+h3 {
+  margin-left: -30px;
+}
+body {
+  margin-left: 80px;
+  background: #444;
+  color: white;
+}
+a:link {
+  color: #ff8;
+}
+a:visited {
+  color: #fa8;
+}
+.picture {
+  box-shadow: 0px 0px 6px white;
+}
+</style>
 <title>Hither and Thither: About</title>
 <h1>Hither and Thither: About</h1>
 
@@ -7,7 +31,7 @@ Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of
 We show you the destinations of outgoing Aussies and origins of incomming visitors.
 
 <div>
-<img src="DSTC_TShirt.jpg" height=200 style="position:absolute; left:300px;">
+<img class="picture" src="DSTC_TShirt.jpg" height=200 style="position:absolute; left:360px;">
 <h3 name="awesome-team">Team</h3>
 Andy and the ex-DSTCers are:
 <ul>
@@ -34,5 +58,10 @@ Made with the very awesome <a href="http://d3js.org">D3</a> from <a href="http:/
 
 <h3>Thanks</h3>
 Many thanks to the <a href="http://www.govhack.org">Govhack</a> organizers nationally and <a href="http://www.govhack.org/locations/brisbane/">locally</a>, here in Brisbane (thanks Anna Gerber).
+
+<footer width="900px" align="center">
+<a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/"><img alt="Creative Commons Licence" height="20" style="position:absolute; bottom:10px; left:140px; border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
+<a style="position:absolute; bottom:10px; right:140px; color: #f44" href="credits.html">credits</a>
+</footer>
 
 
