Vic Builder stuff

--- a/vic-builder/www/about.html
+++ b/vic-builder/www/about.html
@@ -21,29 +21,52 @@ About
 </CENTER>
 
 <P>
-Victoria Builder turned a spreadsheet into a visual reference:
+Victoria Builder is an online visual reference of building activity in Victoria. It exposes data previously stored in extremely large spreadsheets.
 </P>
 
 <IMG SRC="images/about.png" STYLE="width: 800px">
 
 <P>
-We used these tools: Python, MySQL, Microsoft Excel, PHP, Google APIs (Geocoding and StreetView), Nec
-</P>
 
 <P>
-Attributions:
+
+
+<!--
+<P>
+To do this, we first converted a number of Excel spreadsheets into SQL. We then made that data available via a REST/JSON web service.  A number of software tools were used to achieve this: Python, MySQL, Microsoft Excel, PHP, the Google APIs (Geocoding and StreetView) and D3.
+</P>
+-->
+
+<P>
+<B>Attributions:</B>
 <P>
 
 <UL>
 
-<LI><A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A>
-<LI><A TARGET="_new" HREF="http://www.vba.vic.gov.au/">Victorian Building Authority</A>
-<LI><A TARGET="_new" HREF="https://developers.google.com/maps/documentation/geocoding/">Google Geocoding API</A>
-<LI><A TARGET="_new" HREF=""></A>
-https://nectar.org.au/
-<LI>and we drew inspiration from <A HREF="http://robotflaneur.com/">Robot Flaneur</A>.
+<A HREF="http://creativecommons.org/licenses/by/2.5/au/"><IMG SRC="https://i.creativecommons.org/l/by/2.5/au/88x31.png"></A>
+<LI>Street addresses via <A TARGET="_new" HREF="https://developers.google.com/maps/documentation/geocoding/">Google Geocoding API</A>
+<LI>Street photographs via <A TARGET="_new" HREF="https://www.google.com/maps/views/streetview?gl=au">Google StreetView</A>
+<LI>Graph Visualizations with Mike Bostock's <A TARGET="_new" HREF="http://d3js.org/">D3</A>
+<LI>Database and website hosted on <A TARGET="_new" HREF="https://nectar.org.au/">NeCTAR</A>
+<LI><A HREF="https://www.data.vic.gov.au/tag/Building+Activity">Victorian Building Authority data</A> provided by <A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A><BR>
 
 </UL>
+
+<P>
+<B>Team:</B>
+</P>
+
+<P>
+Created for GovHack 2014, by <I>Andy and the ex-DSTCers</I>:
+
+<UL>
+<LI>Michael Henderson
+<LI>Alejandro Metke
+<LI>Michael Lawley
+<LI>Kerry Raymond
+<LI>Andy Hyland
+<LI>Jim Steel 
+<P>
 
 </TD>
 </TR>
