--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -5,9 +5,9 @@
   <LINK REL="stylesheet" TYPE="text/css" HREF="style.css">
 </HEAD>
 
-<frameset rows="400,*" frameborder=0>
+<frameset rows="345,*" frameborder=0>
   <frame src="header.php" name="header">
-  <frame src="explore.php" name="content">
+  <frame src="explore.php" id="content" name="content">
 </frameset> 
 
 </HTML>
