--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -26,7 +26,8 @@ a:visited {
 <title>Hither and Thither: About</title>
 <h1>Hither and Thither: About</h1>
 
-Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of passenger movements from 1991 to 2014.
+<img class="picture" src="http://upload.wikimedia.org/wikipedia/commons/f/fb/Outgoing_Passenger_Card_Australia.jpg" height=100 style="position:absolute; left:800px;">
+Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of <a href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3401.0Explanatory%20Notes1May%202014?OpenDocument">passenger movements</a> from 1991 to 2014.
 <p>
 We show you the destinations of outgoing Aussies and origins of incomming visitors.
 
@@ -45,7 +46,7 @@ Andy and the ex-DSTCers are:
 </div>
 
 <h3>Attributions</h3>
-Data was <a href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3401.0Explanatory%20Notes1May%202014?OpenDocument">sourced from</a> the <a href="http://www.abs.gov.au">Australian Bureau of Statistics</a>.
+Data was sourced from the <a href="http://www.abs.gov.au">Australian Bureau of Statistics</a>.
 <ul>
 <li> <a href="http://www.abs.gov.au/AUSSTATS/ABS@Archive.nsf/log?openagent&340105.xls&3401.0&Time%20Series%20Spreadsheet&26A2C3723CF8403ECA257D0B0019476C&0&May%202014&07.07.2014&Latest">Table 5: Short-term Movement, Visitor Arrivals - Selected Countries of Residence: Original</a>
 <li> <a href="http://www.abs.gov.au/AUSSTATS/ABS@Archive.nsf/log?openagent&340109.xls&3401.0&Time%20Series%20Spreadsheet&FBA236EB46E8F394CA257D0B00194880&0&May%202014&07.07.2014&Latest">Table 9: Short-term Movement, Resident Departures - Selected Destinations: Original</a>
