use floats instead of absolute pos

--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -9,6 +9,7 @@ h3 {
   margin-left: -30px;
 }
 body {
+  max-width: 900;
   margin-left: 80px;
   background: #444;
   color: white;
@@ -24,9 +25,9 @@ a:visited {
 }
 </style>
 <title>Hither and Thither: About</title>
+<img class="picture" src="http://upload.wikimedia.org/wikipedia/commons/f/fb/Outgoing_Passenger_Card_Australia.jpg" height=100 style="float:right;">
 <h1>Hither and Thither: About</h1>
 
-<img class="picture" src="http://upload.wikimedia.org/wikipedia/commons/f/fb/Outgoing_Passenger_Card_Australia.jpg" height=100 style="position:absolute; left:800px;">
 Welcome to <a href="#awesome-team">Andy and the ex-DSTCers</a>' visualisation of <a href="http://www.abs.gov.au/AUSSTATS/abs@.nsf/Lookup/3401.0Explanatory%20Notes1May%202014?OpenDocument">passenger movements</a> from 1991 to 2014.
 <p>
 We show you the destinations of outgoing Aussies and origins of incomming visitors.
@@ -60,9 +61,9 @@ Made with the very awesome <a href="http://d3js.org">D3</a> from <a href="http:/
 <h3>Thanks</h3>
 Many thanks to the <a href="http://www.govhack.org">Govhack</a> organizers nationally and <a href="http://www.govhack.org/locations/brisbane/">locally</a>, here in Brisbane (thanks Anna Gerber).
 
-<footer width="900px" align="center">
-<a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/"><img alt="Creative Commons Licence" height="20" style="position:absolute; bottom:10px; left:140px; border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
-<a style="position:absolute; bottom:10px; right:140px; color: #f44" href="credits.html">credits</a>
+<footer width="900px" style="margin-top:30px;" align="center">
+<a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/"><img alt="Creative Commons Licence" height="20" style="float:left; border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
+<a style="float:right; color: #f44" href="credits.html">credits</a>
 </footer>
 
 
