--- a/HitherAndThither/credits.html
+++ b/HitherAndThither/credits.html
@@ -57,6 +57,8 @@ which are available under the <a rel="license" href="http://creativecommons.org/
 <p>
 Made with the very awesome <a href="http://d3js.org">D3</a> from <a href="http://bost.ocks.org/mike/">Mike Bostock</a> and
 <a href="http://datamaps.github.io">Datamaps</a> from <a href="https://github.com/markmarkoh">Mark DiMarco</a> (Released under the <a href="https://github.com/markmarkoh/datamaps/blob/master/LICENSE">MIT License</a>)
+<p>
+<a href="http://www.mademyday.de/css-height-equals-width-with-pure-css.html">Pure CSS aspect ratio sizing</a> from Marc Hinse.
 
 <h3>Thanks</h3>
 Many thanks to the <a href="http://www.govhack.org">Govhack</a> organizers nationally and <a href="http://www.govhack.org/locations/brisbane/">locally</a>, here in Brisbane (thanks Anna Gerber).
