--- a/HitherAndThither/index.html
+++ b/HitherAndThither/index.html
@@ -1,27 +1,74 @@
-<html style="font-family: helvetica;">
+<html style="background: #444; font-family: monospace;">
 <title>Hither and Thither</title>
+
+<style>
+.box {
+  position: relative;
+  width: 100%;		/* desired width */
+}
+.box:before {
+  content: "";
+  display: block;
+  padding-top: 40%; 	/* initial ratio of 1:1*/
+}
+.content{
+  position:  absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.airportC {
+  font:32/1 monospace;
+  color: white;
+  background: #444;
+  display: block;
+  margin-right: 1px;
+}
+</style>
 
 <script src="d3/d3.v3.min.js"></script>
 <script src="d3/topojson.v1.min.js"></script>
 <script src="js/datamaps.world.min.js"></script>
-<h1>Hither and Thither: <span id="date">None</span></h1>
-<table width="600"><tr>
+
+<div id="outer" align=center>
+<div id="title" class="airportC">Hither and Thither: <span id="date">None</span>
+<table class="airportC" style="font: 20px/1 monospace;" width="80%"><tr>
 <td>
   <input type="radio" name="direction" id="departureDir" value="Departures" checked>Departures
   <input type="radio" name="direction" id="arrivalDir" value="Arrivals">Arrivals
-<td>
+<td style="text-align: right">
   <input type="radio" name="period" id="monthP" value="Month">Months
   <input type="radio" name="period" id="allP" value="Both" checked>Months &amp; Years
   <input type="radio" name="period" id="yearP" value="Year">Years
 </table>
-<div id="container" style="position: relative; width: 95%; height: 80%;">
+</div>
+<div>
+<div class="box">
+  <div class="content" id="container" style="width:100%;"></div>
+  <p style="font-size: 14pt; display:inline; list-style-type:square; z-index: 1000; position:relative; bottom:-30px; left:0px; width:100px;">
+    <span style="text-shadow:0px 0px 2px black; color:#88f">decreasing</span>&nbsp;&nbsp;&nbsp;
+    <span style="text-shadow:0px 0px 2px black; color:#ff8">steady</span>&nbsp;&nbsp;&nbsp;
+    <span style="text-shadow:0px 0px 2px black; color:#f88">increasing</span>
+  </p>
+</div>
+</div>
+<footer width="100%" style="margin-top:20px;" align="center">
+<a rel="license" href="http://creativecommons.org/licenses/by/2.5/au/"><img alt="Creative Commons Licence" height="20" style="float:left; border-width:0" src="https://i.creativecommons.org/l/by/2.5/au/88x31.png" /></a>
+<a style="float:right; color: #f44" href="credits.html">credits</a>
+</footer>
 </div>
 <script>
 
-var ausLat = [-25.27439, 133.775136],
+var ausLatLong = // [-35.3052,149.1959],/*CAN*/
+             // [-33.9398,151.177],/*SYD*/
+             // [-28.3934,153.121]/*GC*/,
+             [-29.3934,151.121]/*BNE+tweak*/,
+             // [-25.27439, 133.775136]/*CENTROID*/,
   map = new Datamap({
   element: document.getElementById('container'),
-  projection: 'mercator',
+  // projection: 'mercator',
   setProjection: function(element, options) {
             var projection, path;
             projection = d3.geo.mercator()
@@ -55,8 +102,16 @@ var ausLat = [-25.27439, 133.775136],
 });
 
 var dd = d3.select("#date");
+var svg = d3.select("svg");
+var g = svg.append("g");
 
-var g = d3.select("svg").append("g");
+function addText(sel, txt) {
+  sel.style("background", "white");
+  sel.selectAll("span .airportC").remove();
+  txt.split("").forEach(function (c) {sel.append("span").attr("class", "airportC").text(c === " " ? "." : c)})
+}
+
+// addText(d3.select("#title"), "Hither and Thither: ");
 
 function computeYearly(months) {
   var years = [], currentY = "", totals, count = 0;
@@ -131,6 +186,8 @@ function getPeriod() {
 }
 
 d3.csv('data/countries.csv', function(error, csvData) {
+  csvData.forEach(function (c) { c.latitude = parseFloat(c.latitude); c.longitude = parseFloat(c.longitude); });
+
   d3.csv('data/340105.csv', function(error, arrivalsMonths) {
     d3.csv('data/340109.csv', function(error, departuresMonths) {
       var arrivalsYears = computeYearly(arrivalsMonths);
@@ -160,7 +217,7 @@ function process(csvData, months, arrivals) {
     .filter(function (c) {
       return typeof months[0][c.country] !== "undefined" && c.country.indexOf("Total") < 0 && c.country.indexOf("Other") < 0;
     }),
-    aus = map.latLngToXY(ausLat[0], ausLat[1]);
+    aus = map.latLngToXY(ausLatLong[0], ausLatLong[1]);
 
   countries
     .forEach(function (c) {
@@ -170,15 +227,56 @@ function process(csvData, months, arrivals) {
     });
 
 /*
-  var pp = g.selectAll(".route")
-    .data(countries, function(c,i) { if (c) {return c.country;}else{console.log(i); return c;} })
-    .enter()
-      .append("path")
-        .attr("class", "route")
-        .attr("stroke", "#1f1")
-        .attr("stroke-width", 20)
-        .attr("d", function(c) { return "M "+aus[0]+" "+aus[1]+" L "+c.x+" "+c.y; });
+  var tt = d3.select("#countries").selectAll(".country")
+    .data(countries, function(c,i) { return c.country; });
+
+  tt.enter()
+    .append("tr")
+      .attr("class", "country")
+        .append("td")
+          .html(function (c) {return c.country;});
+  tt.exit().remove();
 */
+
+  var def = {r: 1, c: "gray", po: 0.1, bo: 0.2};
+
+  var pp = g.selectAll(".route")
+    .data(countries, function(c,i) { return c.country; });
+
+  pp.interrupt().transition();
+
+  function points(x1,y1,x2,y2,d) {
+    return x1+","+(y1-1)
+                 +" "+x1+","+(y1+1)
+                 +" "+x2+","+(y2+d)
+                 +" "+x2+","+(y2-d);
+  }
+
+  if (false) {
+    pp.enter()
+      .append("polygon")
+        .attr("class", "route")
+        .attr("points", function(c) {
+          return points(aus[0],aus[1],c.x,c.y,5);
+        })
+        .style("fill", "gray")
+        .style("stroke", "white")
+        .style("stroke-width", 2)
+        .style("opacity", 0.2);
+  } else {
+    pp.enter()
+      .append("path")
+        // Note the argument order in the following: LONG, LAT
+        .each(function(c) {c.type="LineString"; c.coordinates=[[ausLatLong[1],ausLatLong[0]], [c.longitude,c.latitude-def.r], [c.longitude,c.latitude+def.r], [ausLatLong[1],ausLatLong[0]]]; })
+        .attr("class", "route")
+        .style("opacity", 0.3)
+        .style("fill", def.c)
+        // .style("stroke", "#111")
+        // .style("stroke-width", 2)
+        .attr("d", map.path);
+  }
+
+  pp.exit().remove();
 
   var bub = g.selectAll(".bub")
     .data(countries, function(c,i) { return c.country; });
@@ -192,14 +290,13 @@ function process(csvData, months, arrivals) {
       .attr("cx", function (c) { return c.x; })
       .attr("cy", function (c) { return c.y; })
       .attr("opacity", 0.7)
-      .attr("stroke", "white")
-      .attr("stroke-width", 2)
-      .attr("r", 0)
-      .style("fill", "#f1f")
+      .attr("stroke", "#ff8")
+      .attr("stroke-width", 4)
+      .attr("r", def.r)
+      .style("fill", "#ff8")
       .each(function () { d3.select(this).append("title").text(function(c) { return c.country; }) });
 
   bub.exit()
-    .each(function(d) {console.log(d.country);})
     .remove();
 
   var fly = g.selectAll(".fly")
@@ -213,15 +310,27 @@ function process(csvData, months, arrivals) {
       .attr("class", "fly")
       .attr("cx", aus[0])
       .attr("cy", aus[1])
-      .attr("opacity", 0.7)
-      .attr("stroke", "black")
-      .attr("stroke-width", 1)
-      .attr("r", 5)
-      .style("fill", "#1ff");
+      .attr("opacity", def.bo)
+      // .attr("stroke", "black")
+      // .attr("stroke-width", 1)
+      .attr("r", def.r)
+      .style("fill", def.c);
   fly.exit()
     .remove();
 
-  var flyTime = 1000, growTime = 1000, resetTime = 100, time = resetTime+flyTime+growTime, delta = 1;
+  var flyTime =  800, growTime = 1500, resetTime = 100, time = resetTime+flyTime+growTime, delta = 1;
+
+  function bcolor (m,i,d) {
+    var thisSize = bsize(m[d.country]),
+        prevSize = i == 0 ? thisSize : bsize(months[i-1][d.country]);
+    if (thisSize / prevSize > 1.1) {
+      return "#f88";
+    } else if (thisSize / prevSize < 0.9) {
+      return "#88f";
+    } else {
+      return "#ff8";
+    }
+  }
 
   months
     .forEach(function (m, i) {
@@ -236,10 +345,12 @@ function process(csvData, months, arrivals) {
         .duration(flyTime)
         .attr("cx", function(d) { return arrivals ? aus[0] : d.x; })
         .attr("cy", function(d) { return arrivals ? aus[1] : d.y; })
-        .attr("r", 3)
+        .attr("r", function(d) { return bsize(m[d.country])/1.2; })
+        //.attr("r", 3)
         .each("start", function () {
           // reset to Australia
           d3.select(this)
+            .attr("opacity", def.po)
             .attr("r", 5)
             .attr("cx", function(d) { return arrivals ? d.x : aus[0]; })
             .attr("cy", function(d) { return arrivals ? d.y : aus[1]; });
@@ -247,31 +358,48 @@ function process(csvData, months, arrivals) {
         .each("end", function () {
           // shrink at end
           d3.select(this)
-            .attr("r", 2);
+            .attr("opacity", 0)//def.bo)
+            .attr("r", function(d) { return bsize(m[d.country])/4; });
+            //.attr("r", 2);
         });
+
+if (false) {
+      pp
+        .each(function(c,i) {
+var r = bsize(m[c.country])/6;
+
+var up = c.latitude - r;
+var dn = c.latitude + r;
+
+c.coordinates=[[ausLatLong[1],ausLatLong[0]], [c.longitude,up], [c.longitude,dn], [ausLatLong[1],ausLatLong[0]]];
+})
+        .transition()
+        .delay(resetTime+(i*time))
+        .duration(flyTime)
+        .attr("d", map.path);
+} else {
+      pp.transition()
+        .delay(resetTime+(i*time))
+        .duration(flyTime)
+        .attr("points", function(c) {
+          return points(aus[0],aus[1],c.x,c.y,bsize(m[c.country]));
+        });
+}
 
       // fade destination
       bub.transition()
         .delay((i*time))
         .duration(flyTime)
-        .attr("opacity", 0.1);
+      // .attr("stroke", function(d) { return bcolor(m,i,d); })
+        .attr("fill-opacity", 0.1);
 
       // resize destination
       bub.transition()
         .delay(flyTime+(i*time))
         .duration(growTime)
-        .attr("opacity", 0.7)
-        .style("fill", function (d) {
-          var thisSize = bsize(m[d.country]),
-              prevSize = i == 0 ? thisSize : bsize(months[i-1][d.country]);
-          if (thisSize / prevSize > 1.1) {
-            return "#f11";
-          } else if (thisSize / prevSize < 0.9) {
-            return "#11f";
-          } else {
-            return "#ff1";
-          }
-        })
+        .attr("fill-opacity", 0.7)
+        .attr("stroke", function(d) { return bcolor(m,i,d); })
+        .style("fill", function(d) { return bcolor(m,i,d); })
         .attr("r", function(d) { return bsize(m[d.country]); });
 
     })
