Content and style updates. Checkin js libraries.

--- a/vic-builder/www/about.html
+++ b/vic-builder/www/about.html
@@ -43,12 +43,13 @@ To do this, we first converted a number of Excel spreadsheets into SQL. We then 
 
 <UL>
 
-<A HREF="http://creativecommons.org/licenses/by/2.5/au/"><IMG SRC="https://i.creativecommons.org/l/by/2.5/au/88x31.png"></A>
+<LI><A HREF="https://www.data.vic.gov.au/tag/Building+Activity">Victorian Building Authority data</A> provided by <A TARGET="_new" HREF="https://www.data.vic.gov.au/">State Government of Victoria</A><BR> (available under a Creative Commons Attribution 2.5 Australia License)<BR>
+<A HREF="http://creativecommons.org/licenses/by/2.5/au/"><IMG SRC="https://i.creativecommons.org/l/by/2.5/au/88x31.png"></a>
 <LI>Street addresses via <A TARGET="_new" HREF="https://developers.google.com/maps/documentation/geocoding/">Google Geocoding API</A>
 <LI>Street photographs via <A TARGET="_new" HREF="https://www.google.com/maps/views/streetview?gl=au">Google StreetView</A>
 <LI>Graph Visualizations with Mike Bostock's <A TARGET="_new" HREF="http://d3js.org/">D3</A>
 <LI>Database and website hosted on <A TARGET="_new" HREF="https://nectar.org.au/">NeCTAR</A>
-<LI><A HREF="https://www.data.vic.gov.au/tag/Building+Activity">Victorian Building Authority data</A> provided by <A TARGET="_new" HREF="https://www.data.vic.gov.au/tag/Building+Activity">State Government of Victoria</A><BR>
+<LI>Design, colours and other inspiration from photographs on <A HREF="http://trove.nla.gov.au/">Trove</A>
 
 </UL>
 
