--- a/vic-builder/www/index.html
+++ b/vic-builder/www/index.html
@@ -6,8 +6,8 @@
 </HEAD>
 
 <frameset rows="345,*" frameborder=0>
-  <frame src="header.php" name="header">
-  <frame src="explore.php" id="content" name="content">
+  <frame src="header.php" name="header" frameborder=0>
+  <frame src="explore.php" id="content" name="content" frameborder=0>
 </frameset> 
 
 </HTML>
